<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mainScreen_menuItem_resetDebate"
        android:orderInCategory="0"
        android:title="@string/mainScreen_menuItem_resetDebate" android:icon="@drawable/ic_menu_close_clear_cancel"/>
    <item
        android:id="@+id/mainScreen_menuItem_chooseFormat"
        android:orderInCategory="1"
        android:title="@string/mainScreen_menuItem_chooseFormat" android:icon="@drawable/ic_menu_mapmode"/>
    <item
        android:id="@+id/mainScreen_menuItem_settings"
        android:orderInCategory="3"
        android:title="@string/mainScreen_menuItem_settings" android:icon="@drawable/ic_menu_preferences"/>
    <item
        android:id="@+id/mainScreen_menuItem_prevSpeaker"
        android:orderInCategory="2"
        android:title="@string/mainScreen_menuItem_prevSpeaker" android:icon="@drawable/ic_menu_back"/>

</menu>